# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("hello") {
  sources = [
    "hello.cc"
  ]

  deps = [
    "//base",
  ]
}

group("mini_chromium") {
  deps = [
    "//base",
    ":hello"
  ]
}
